--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,11 +18,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Node.js 환경 설정 (v18 사용)
+      # 2. Node.js 환경 설정 (v20 사용)  ← 여기만 18 → 20 으로 변경
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm' # npm 의존성 캐싱으로 속도 향상
 
       # 3. 프로젝트 의존성 설치
