--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,17 @@
 name: Auto Generate and Deploy
 
 on:
-  workflow_dispatch:
+  # 1. 스케줄에 따라 자동 실행
   schedule:
+    # UTC 기준 매일 0시, 5시, 10시, 15시, 20시에 실행 (한국 시간: 오전 9시, 오후 2시, 저녁 7시, 밤 12시, 새벽 5시)
     - cron: '0 0,5,10,15,20 * * *'
+  
+  # 2. 수동으로 실행할 수 있도록 버튼 추가
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # 가상 컴퓨터 환경: 우분투 최신 버전
 
     steps:
       # 1. 저장소 코드 가져오기
@@ -19,7 +23,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'npm' # npm 의존성 캐싱으로 속도 향상
 
       # 3. 프로젝트 의존성 설치
       - name: Install dependencies
@@ -33,10 +37,26 @@ jobs:
           COUPANG_SECRET_KEY: ${{ secrets.COUPANG_SECRET_KEY }}
 
       # 5. 웹사이트 파일 생성 스크립트 실행
+      # 5. 변경된 postsData.json 파일을 Git에 커밋 및 푸시
+      - name: Commit and push if changed
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add postsData.json
+          # 변경사항이 있을 때만 커밋
+          if ! git diff --staged --quiet; then
+            git commit -m "chore: postsData.json 자동 업데이트"
+            git push
+          else
+            echo "postsData.json에 변경사항이 없습니다."
+          fi
+
+      # 6. 웹사이트 파일 생성 스크립트 실행
       - name: Build static site
         run: node generate.js
 
       # 6. Firebase에 배포
+      # 7. Firebase에 배포
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
@@ -44,3 +64,4 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
           channelId: live
           projectId: 'coupang-auto-site'
+
