chore: Remove service account key and add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,7 @@ node_modules/
 # dataconnect generated files
 .dataconnect
 coupang-auto-site-firebase-adminsdk-fbsvc-9699712f31.json
+
+# Firebase/Google Cloud 서비스 계정 키
+*.json
+
