--- a/firebase.json
+++ b/firebase.json
@@ -1,9 +1,11 @@
+{
   "hosting": {
     "public": "dist",
     "ignore": [
-      "firebase.json",
+      "firebase.json",      "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
     "rewrites": [ { "source": "**", "destination": "/index.html" } ]
   }
+}
